<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rosa_claro"
    tools:context="com.gov.guia.guiacomumdorecife.view.participe.ParticiparActivity">

    <include
        android:id="@+id/include4"
        layout="@layout/cabecalho"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/participe_titulo"
        android:textColor="@color/azul_marinho"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="@string/participe_resumo"
        android:textColor="@color/azul_marinho"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edit_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_background"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/participe_nome"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:singleLine="true"
        android:textColor="@color/azul_marinho"
        android:textColorHint="@color/azul_marinho"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_background"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/participe_email"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:singleLine="false"
        android:textColor="@color/azul_marinho"
        android:textColorHint="@color/azul_marinho"
        app:layout_constraintEnd_toEndOf="@+id/edit_nome"
        app:layout_constraintStart_toStartOf="@+id/edit_nome"
        app:layout_constraintTop_toBottomOf="@+id/edit_nome" />

    <EditText
        android:id="@+id/edit_descricao"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_background"
        android:ems="10"
        android:fontFamily="serif"
        android:gravity="top"
        android:hint="@string/participe_descricao"
        android:inputType="text"
        android:padding="5dp"
        android:textColor="@color/azul_marinho"
        android:textColorHint="@color/azul_marinho"
        app:layout_constraintBottom_toTopOf="@+id/btn_tirar_foto"
        app:layout_constraintEnd_toEndOf="@+id/edit_email"
        app:layout_constraintStart_toStartOf="@+id/edit_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <ImageButton
        android:id="@+id/btn_compartilhar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/btn_enviar" />

    <ImageButton
        android:id="@+id/btn_tirar_foto"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/termos_ver"
        app:layout_constraintEnd_toStartOf="@+id/btn_gravar_audio"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/edit_descricao"
        app:srcCompat="@drawable/btn_foto" />

    <ImageButton
        android:id="@+id/btn_gravar_audio"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/btn_local_atual"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_tirar_foto"
        app:layout_constraintTop_toTopOf="@+id/btn_tirar_foto"
        app:srcCompat="@drawable/btn_audio" />

    <ImageButton
        android:id="@+id/btn_local_atual"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="@+id/edit_descricao"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_gravar_audio"
        app:layout_constraintTop_toTopOf="@+id/btn_gravar_audio"
        app:srcCompat="@drawable/btn_local" />

    <CheckBox
        android:id="@+id/termos_aceitar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/azul_marinho"
        app:layout_constraintBottom_toBottomOf="@+id/termos_ver"
        app:layout_constraintStart_toStartOf="@+id/edit_descricao"
        app:layout_constraintTop_toTopOf="@+id/termos_ver" />

    <Button
        android:id="@+id/termos_ver"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:fontFamily="serif"
        android:text="@string/termos_botao"
        android:textAlignment="textStart"
        android:textColor="@color/azul_marinho"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_compartilhar"
        app:layout_constraintEnd_toEndOf="@+id/edit_descricao"
        app:layout_constraintStart_toEndOf="@+id/termos_aceitar" />

</android.support.constraint.ConstraintLayout>
